# gtest-clion

learn-note/Unit1-FirstDemo/FooTest/: CMakeLists.txt  main.cpp
learn-note/Unit2-Assert/AssertAndExpect/: CMakeLists.txt  main.cpp
learn-note/Unit2-Assert/error_throw_test/FooTest/: CMakeLists.txt  main.cpp
learn-note/Unit2-Assert/predicate_assertions/FooTest/: main.cpp
learn-note/Unit2-Assert/print_message_test/FooTest/: main.cpp
learn-note/Unit3-event_mechanism/FooEnvironment/: CMakeLists.txt  main.cpp
learn-note/Unit4- parameterization/Combine/FooTest/: main.cpp
learn-note/Unit4- parameterization/Range/FooTest/: main.cpp
learn-note/Unit4- parameterization/Values/FooTest/: main.cpp
learn-note/Unit4- parameterization/struct/FooTest/: main.cpp
learn-note/Unit5-DethTest/FooTest1/: main.cpp
